CostalCloud/force-app/main/default/objects/DELETEInstaller_Percentage__c.object
<CustomObject>
    <fields>
        <fullName>ACCOUNTID__c</fullName>
        <label>ACCOUNTID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT__c</fullName>
        <label>ACCOUNT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Percentage_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installer Percentage ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOBCODE__c</fullName>
        <label>JOBCODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOBTYPEID__c</fullName>
        <label>JOBTYPEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOBTYPE_Description__c</fullName>
        <label>JOBTYPE Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JOB_TYPE__c</fullName>
        <label>JOB_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY_INSTALLER__c</fullName>
        <label>PRIMARY INSTALLER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Market__c</fullName>
        <label>﻿Reporting Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STORE_NUMBER__c</fullName>
        <label>STORE NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>svcCodeType__c</fullName>
        <label>svcCodeType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DELETEInstaller Percentage</label>
    <nameField>
        <label>Installer Percentage</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DELETEnstaller Percentages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>